--- a/Extracellular Tutorial.ipynb
+++ b/Extracellular Tutorial.ipynb
@@ -47,14 +47,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rxd.options.enable.extracellular = True"
+    "rxd.options.enable.extracellular=True"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To use extracellular reaction diffusion it must be enabled."
+    "To use extracellular reaction diffusion it must be enabled, it is enabled by default in NEURON 7.7 or later."
    ]
   },
   {
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from neuron import gui\n",
+    "h.load_file('stdrun.hoc')\n",
     "h.load_file('import3d.hoc')\n",
     "class Cell:\n",
     "    def __init__(self,filename):\n",
@@ -105,13 +105,12 @@
     "            sec.insert('steady_k')\n",
     "    def extrema(self):\n",
     "        \"\"\"Give the bounding box that contains the cell\"\"\"\n",
-    "        h.define_shape()\n",
     "        xlo = ylo = zlo = xhi = yhi = zhi = None\n",
     "        for sec in self.all:\n",
-    "            n3d = int(h.n3d(sec=sec))\n",
-    "            xs = [h.x3d(i, sec=sec) for i in xrange(n3d)]\n",
-    "            ys = [h.y3d(i, sec=sec) for i in xrange(n3d)]\n",
-    "            zs = [h.z3d(i, sec=sec) for i in xrange(n3d)]\n",
+    "            n3d = sec.n3d()\n",
+    "            xs = [sec.x3d(i) for i in range(n3d)]\n",
+    "            ys = [sec.y3d(i) for i in range(n3d)]\n",
+    "            zs = [sec.z3d(i) for i in range(n3d)]\n",
     "            my_xlo, my_ylo, my_zlo = min(xs), min(ys), min(zs)\n",
     "            my_xhi, my_yhi, my_zhi = max(xs), max(ys), max(zs)\n",
     "            if xlo is None:\n",
@@ -160,7 +159,7 @@
     "padding = 50\n",
     "ecs = rxd.Extracellular(xlo - padding, ylo - padding, zlo - padding,\n",
     "                        xhi + padding, yhi + padding, zhi + padding,\n",
-    "                        dx = (20, 20, 50) , volume_fraction = 0.2, tortuosity = 1.6)"
+    "                        dx=(20, 20, 50), volume_fraction=0.2, tortuosity=1.6)"
    ]
   },
   {
@@ -177,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = rxd.Species(ecs, d = 2.62, name = 'k', charge = 1, initial = 3)"
+    "k = rxd.Species(ecs, d=2.62, name='k', charge=1, initial=3)"
    ]
   },
   {
@@ -212,7 +211,7 @@
     "def runsim(species, min_conc=3, max_conc=4, frames=1000):\n",
     "    h.finitialize()\n",
     "    fig = pyplot.figure()\n",
-    "    im = pyplot.imshow(species[ecs].states3d.mean(2), vmin = min_conc, vmax = max_conc)\n",
+    "    im = pyplot.imshow(species[ecs].states3d.mean(2), vmin=min_conc, vmax=max_conc)\n",
     "    pyplot.axis('off')\n",
     "\n",
     "    def init():\n",
@@ -223,7 +222,7 @@
     "        im.set_data(species[ecs].states3d.mean(2))\n",
     "        return [im]\n",
     "\n",
-    "    anim = animation.FuncAnimation(fig, animate, init_func=init, frames = frames, interval = 10)\n",
+    "    anim = animation.FuncAnimation(fig, animate, init_func=init, frames=frames, interval=10)\n",
     "    ret =  HTML(anim.to_html5_video())\n",
     "    pyplot.close()\n",
     "    return ret"
@@ -2009,7 +2008,7 @@
     }
    ],
    "source": [
-    "runsim(k, min_conc = 3, max_conc = 4)"
+    "runsim(k, min_conc=3, max_conc=4)"
    ]
   },
   {
@@ -2028,7 +2027,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f2f291a5650>]"
+       "[<matplotlib.lines.Line2D at 0x7f89a8098f10>]"
       ]
      },
      "execution_count": 11,
@@ -2083,7 +2082,7 @@
    "outputs": [],
    "source": [
     "del k\n",
-    "k = rxd.Species(ecs, d = 2.62, name = 'k', charge = 1, initial = 3, ecs_boundary_conditions = 3)"
+    "k = rxd.Species(ecs, d=2.62, name='k', charge=1, initial=3, ecs_boundary_conditions=3)"
    ]
   },
   {
@@ -3705,7 +3704,7 @@
     }
    ],
    "source": [
-    "runsim(k, min_conc = 3, max_conc = 4)"
+    "runsim(k, min_conc=3, max_conc=4)"
    ]
   },
   {
@@ -3728,8 +3727,8 @@
     "kf = kb / (1.0 + rxdmath.exp(-(k - kth)/1.15))\n",
     "Bmax = 10\n",
     "\n",
-    "A = rxd.Species(ecs, name = 'buffer', charge=1, d=0, initial = Bmax)\n",
-    "AK = rxd.Species(ecs, name = 'bound', charge=1, d=0, initial = 0)"
+    "A = rxd.Species(ecs, name='buffer', charge=1, d=0, initial=Bmax)\n",
+    "AK = rxd.Species(ecs, name='bound', charge=1, d=0, initial=0)"
    ]
   },
   {
@@ -4512,7 +4511,7 @@
     }
    ],
    "source": [
-    "runsim(AK, min_conc = 0, max_conc = 0.1)"
+    "runsim(AK, min_conc=0, max_conc=0.1)"
    ]
   },
   {
@@ -4532,7 +4531,7 @@
    "source": [
     "del A, buffering\n",
     "A = rxd.Species(ecs,name='buffer', charge=1, d=0,\n",
-    "                initial = lambda nd: 10 if (nd.x**2) + (nd.y**2) + nd.x**2 < 25**2 else 0)\n",
+    "                initial=lambda nd: 10 if (nd.x**2) + (nd.y**2) + nd.x**2 < 25**2 else 0)\n",
     "buffering = rxd.Reaction(k + A, AK, kf, kb)"
    ]
   },
@@ -4551,7 +4550,7 @@
    "outputs": [],
    "source": [
     "del A, AK, buffering, k\n",
-    "k = rxd.Species(ecs, d = (2.62, 2.62, 0), name = 'k', charge = 1, initial = 3)"
+    "k = rxd.Species(ecs, d=(2.62, 2.62, 0), name='k', charge=1, initial=3)"
    ]
   },
   {
@@ -4565,9 +4564,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
