--- a/Hodgkin–Huxley model (parameters).ipynb
+++ b/Hodgkin–Huxley model (parameters).ipynb
@@ -235,9 +235,9 @@
     "tvec = h.Vector().record(h._ref_t)\n",
     "\n",
     "vvecA = h.Vector().record(somaA(0.5)._ref_v)\n",
-    "mvecA = h.Vector().record(mgate.nodes(somaA(0.5))[0]._ref_value)\n",
-    "nvecA = h.Vector().record(ngate.nodes(somaA(0.5))[0]._ref_value)\n",
-    "hvecA = h.Vector().record(hgate.nodes(somaA(0.5))[0]._ref_value)\n",
+    "mvecA = h.Vector().record(mgate.nodes(somaA(0.5))._ref_value)\n",
+    "nvecA = h.Vector().record(ngate.nodes(somaA(0.5))._ref_value)\n",
+    "hvecA = h.Vector().record(hgate.nodes(somaA(0.5))._ref_value)\n",
     "kvecA = h.Vector().record(somaA(0.5)._ref_ik)\n",
     "navecA = h.Vector().record(somaA(0.5)._ref_ina)\n",
     "\n",
