Better somaCa record.

--- a/cell3_pyr.ipynb
+++ b/cell3_pyr.ipynb
@@ -55,8 +55,7 @@
     "        \n",
     "        if self.rec:\n",
     "            self.somaV = h.Vector().record(self.soma[0](0.5)._ref_v)\n",
-    "            soma_ca_node = [nd for nd in self.ca.nodes if nd.segment in self.soma[0]][0]\n",
-    "            self.somaCa = h.Vector().record(soma_ca_node._ref_concentration)\n",
+    "            self.somaCa = h.Vector().record(self.ca.nodes(self.soma[0])._ref_concentration)\n",
     "\n",
     "    def __repr__(self):\n",
     "        return self.name\n",
