--- a/Radial diffusion of calcium.ipynb
+++ b/Radial diffusion of calcium.ipynb
@@ -100,7 +100,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we define 'Who' the calcium that is diffusing. Because multicompartment reactions are specified in moleques/$\\mu$m$^2$/ms we need to scale the diffusion coefficient used in the reactions."
+    "Next we define 'Who' the calcium that is diffusing. Because multicompartment reactions are specified in moleques/$\\mu$m$^2$/ms we need to scale the diffusion coefficient used in the reactions.\n",
+    "We start the simulation with the a high concentration (1$\\mu$M) in the middle of the dendrite on the outer shell."
    ]
   },
   {
