--- a/Radial diffusion of calcium.ipynb
+++ b/Radial diffusion of calcium.ipynb
@@ -218,11 +218,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The heatmap shows the concentration of calcium (in nM) along the length of the dendrite (x-axis) and across the radial shells (y-axis) after 2.5ms. The second plot shows the concentration in each of the shells over the whole length of the neuron (were the soma connects to the dendrite at x=0)."
+   ]
   }
  ],
  "metadata": {
