--- a/Radial diffusion of calcium.ipynb
+++ b/Radial diffusion of calcium.ipynb
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The heatmap shows the concentration of calcium (in nM) along the length of the dendrite (x-axis) and across the radial shells (y-axis) after 2.5ms. The second plot shows the concentration in each of the shells over the whole length of the neuron (were the soma connects to the dendrite at x=0)."
+    "The heatmap shows the concentration of calcium (in nM) along the length of the dendrite (x-axis) and across the radial shells (y-axis) after 2.5ms. The second plot shows the concentration in each of the shells over the whole length of the neuron (the soma connects to the dendrite at x=0)."
    ]
   }
  ],
